# Ringneck

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: run_tests.yml
examples/: generator.py
src/ringneck/: __init__.py  error_handler.py  grammar.md  interpreter.py  parser.py  scanner.py  tokens.py
src/ringneck/ast/: base.py  expression.py  printer.py  statement.py
src/ringneck/tests/: cases.py  test_embedded.py  test_interpreter.py  test_parser.py  test_scanner.py
