[build-system]
requires = ["hatchling", "hatch-requirements-txt", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[project]
name = "ringneck"
dynamic = ["version"]

description = "A Python-ish script interpreter."
readme = "README.md"

authors = [
  { name = "Greger Stolt Nilsen", email = "gregersn@gmail.com" },
]
license = { file ="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
keywords = ["interpreter"]
dependencies = [
  "typer>=0.6.1"
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/gregersn/ringneck"

[project.scripts]
ringneck = "ringneck.main:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ringneck*"]
exclude = ["ringneck.tests*"]
namespaces = false

[tool.pylint]
max-line-length=140

[tool.pylint."MESSAGE CONTROL"]
disable="missing-function-docstring,missing-class-docstring,invalid-name,too-few-public-methods"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.coverage.run]
omit=["src/ringneck/tests/*"]

[tool.ruff]
line-length = 140
